fix formating bug

--- a/docs/notebooks/beryllium_atom.ipynb
+++ b/docs/notebooks/beryllium_atom.ipynb
@@ -5,6 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Beryllium atom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We solve the Hartree-Fock equations for a closed-shell many-electron system\n",
     "\\begin{equation*}\n",
     "\\left[\\hat{T} + \\hat{V}\\right]\\Phi = \\Phi F\n",
@@ -32,7 +39,7 @@
     "bound-state Helmholtz kernel $G^{\\mu} = e^{-\\mu r}/r$ and $\\mu_i^n = \\sqrt{-2\\lambda_i^n}$\n",
     "is a positive real number. $\\Lambda_{ij}^n = \\lambda_i^n\\delta_{ij}$ is a diagonal matrix containing\n",
     "the same parameters as used in the construction of the Helmholz vector. In practice we choose\n",
-    "$\\lambda_i^n = F_{ii}^n$ such that diagonal elements vanish in $\\left(\\Lambda^n - F^n\\right)$.\n"
+    "$\\lambda_i^n = F_{ii}^n$ such that diagonal elements vanish in $\\left(\\Lambda^n - F^n\\right)$."
    ]
   },
   {
@@ -462,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:26:04) [GCC 10.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
