--- a/docs/notebooks/helium_atom.ipynb
+++ b/docs/notebooks/helium_atom.ipynb
@@ -5,8 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Helium atom\n",
-    "\n",
+    "# Helium atom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Once we have a solver for the Hydrogen Atom (1 atom), the next level off difficulty is the Helium atom (2 atoms). Here we'll show how\n",
     "to make and SCF for the Helium atom within the framework of Hartree&ndash;Fock."
    ]
