--- a/docs/notebooks/beryllium_atom.ipynb
+++ b/docs/notebooks/beryllium_atom.ipynb
@@ -1,7 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Beryllium atom\"\"\"\n",
+    "\n",
+    "__author__    = \"Magnar Bjørgve\"\n",
+    "__credit__    = [\"Magnar Bjørgve\", \"Stig Rune Jensen\"]\n",
+    "\n",
+    "__date__      = \"2021-02-16\""
+   ]
+  },
+  {
    "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Beryllium atom"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,7 +53,7 @@
     "bound-state Helmholtz kernel $G^{\\mu} = e^{-\\mu r}/r$ and $\\mu_i^n = \\sqrt{-2\\lambda_i^n}$\n",
     "is a positive real number. $\\Lambda_{ij}^n = \\lambda_i^n\\delta_{ij}$ is a diagonal matrix containing\n",
     "the same parameters as used in the construction of the Helmholz vector. In practice we choose\n",
-    "$\\lambda_i^n = F_{ii}^n$ such that diagonal elements vanish in $\\left(\\Lambda^n - F^n\\right)$.\n"
+    "$\\lambda_i^n = F_{ii}^n$ such that diagonal elements vanish in $\\left(\\Lambda^n - F^n\\right)$."
    ]
   },
   {
