--- a/docs/notebooks/helmholtz_equation.ipynb
+++ b/docs/notebooks/helmholtz_equation.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Helmholtz equation\"\"\"\n",
+    "\n",
+    "__author__    = \"Magnar Bjørgve\"\n",
+    "__credit__    = [\"Magnar Bjørgve\"]\n",
+    "\n",
+    "__date__      = \"2021-02-16\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
