--- a/docs/notebooks/hydrogen_atom.ipynb
+++ b/docs/notebooks/hydrogen_atom.ipynb
@@ -1,11 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Hydrogen atom\"\"\"\n",
+    "\n",
+    "__author__    = \"Magnar Bjørgve\"\n",
+    "__credit__    = [\"Magnar Bjørgve\"]\n",
+    "\n",
+    "__date__      = \"2021-02-16\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Schrödinger equation for Hydrogen\n",
+    "# Hydrogen atom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "One of the simplest problems to solve, if not the simplest, is the Schrödinger equation for the Hydrogen atom. It's a\n",
     "good starting point to get familiar with `vampyr`. Since, we know the analytic solution, so we have a solution we \n",
