--- a/docs/notebooks/poisson_equation.ipynb
+++ b/docs/notebooks/poisson_equation.ipynb
@@ -1,11 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"The Poisson equation\"\"\"\n",
+    "\n",
+    "__author__    = \"Magnar Bjørgve\"\n",
+    "__credit__    = [\"Magnar Bjørgve\"]\n",
+    "\n",
+    "__date__      = \"2021-02-16\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Poisson equation\n",
+    "# The Poisson equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "A useful equation to solve is the Poisson equation, which among other places appear\n",
     "when we wish to figure out the electrostatic potentail $V$ from the electronic density $\\rho$.\n",
